<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:orientation="vertical">

        <include layout="@layout/layout_app_titlebar" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal" >

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:gravity="center_horizontal" >

                <LinearLayout
                    android:id="@+id/miniAdLinearLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/RelativeLayout01"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@id/linearLayout"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/PointsTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18dip"
                    android:visibility="visible" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" >

                    <Button
                        android:id="@+id/OffersButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/offerList"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/popAdButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/popAd"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" >

                    <Button
                        android:id="@+id/appOffersButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/appOfferList"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/gameOffersButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/gameOfferList"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" >

                    <Button
                        android:id="@+id/diyAdListButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/diyAdList"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/diyAdButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/diyAd"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" >

                    <Button
                        android:id="@+id/spendButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/spendPoints"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/awardButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/awardPoints"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" >

                    <Button
                        android:id="@+id/moreAppsButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/moreApps"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/ownAppDetailButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ownAppDetail"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" >

                    <Button
                        android:id="@+id/feedbackButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/feedback"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/funAdButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/funAd"
                        android:visibility="visible" />
                </LinearLayout>

                <TextView
                    android:id="@+id/SDKVersionView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/AdLinearLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/RelativeLayout01"
                android:gravity="center_horizontal"
                android:orientation="horizontal" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>